--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@nuxtjs/robots": "^3.0.0",
     "@pinia/nuxt": "^0.4.6",
     "pinia": "^2.0.29"
   }
