--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "eslint-plugin-vue": "^9.9.0",
     "nuxt": "^3.0.0",
     "prettier": "^2.8.3",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "@pinia-plugin-persistedstate/nuxt": "^1.0.0"
   },
   "dependencies": {
     "@nuxtjs/robots": "^3.0.0",
