--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/i18n": "8.0.0-beta.7",
+    "@pinia-plugin-persistedstate/nuxt": "^1.0.0",
     "eslint": "^8.32.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.6.0",
@@ -18,8 +20,7 @@
     "eslint-plugin-vue": "^9.9.0",
     "nuxt": "^3.0.0",
     "prettier": "^2.8.3",
-    "typescript": "^4.9.4",
-    "@pinia-plugin-persistedstate/nuxt": "^1.0.0"
+    "typescript": "^4.9.4"
   },
   "dependencies": {
     "@nuxtjs/robots": "^3.0.0",
