--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-vue": "^9.9.0",
     "nuxt": "^3.0.0",
     "prettier": "^2.8.3",
+    "sass": "^1.57.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
