--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "eslint": "^8.32.0",
     "nuxt": "^3.0.0",
     "prettier": "^2.8.3",
-    "sass": "^1.57.1",
-    "typescript": "^4.9.4"
+    "sass": "^1.57.1"
   },
   "dependencies": {
     "@nuxtjs/robots": "^3.0.0",
