--- a/package.json
+++ b/package.json
@@ -9,22 +9,23 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-config-prettier": "^8.6.0",
-    "@typescript-eslint/parser": "^5.56.0",
-    "eslint-config-airbnb": "^19.0.4",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/i18n": "8.0.0-beta.7",
-    "@pinia-plugin-persistedstate/nuxt": "^1.0.0",
-    "eslint": "^8.32.0",
-    "nuxt": "^3.0.0",
-    "prettier": "^2.8.3",
-    "sass": "^1.57.1"
+    "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
+    "@typescript-eslint/parser": "^5.59.6",
+    "eslint": "^8.40.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "nuxt": "^3.5.0",
+    "nuxt-simple-sitemap": "^1.0.11",
+    "prettier": "^2.8.8",
+    "sass": "^1.62.1"
   },
   "dependencies": {
     "@nuxtjs/robots": "^3.0.0",
-    "@pinia/nuxt": "^0.4.6",
-    "nuxt-simple-sitemap": "^1.0.2",
-    "pinia": "^2.0.29"
+    "@pinia/nuxt": "^0.4.10",
+    "dayjs": "^1.11.7",
+    "pinia": "^2.0.36"
   }
 }
