nuxt 버전 업 및 설정 변경

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
   "compilerOptions": {
       "strict": true,
       "strictNullChecks": false,
-      "typeRoots": ["types"],
+      "typeRoots": ["types", "node_modules/@types"],
       "esModuleInterop": true,
       "allowSyntheticDefaultImports": true,
   },
